调整参数